k8s/apps/auth/lldap/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lldap
  name: lldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lldap
    spec:
      containers:
        - env:
            - name: GID
              value: "1001"
            - name: LLDAP_HTTP_HOST
              value: "::"
            - name: LLDAP_LDAP_HOST
              value: "::"
            - name: TZ
              value: CET
            - name: UID
              value: "1001"
            - name: LLDAP_JWT_SECRET
              valueFrom:
                secretKeyRef:
                  name: lldap-secrets
                  key: lldap-jwt-secret
            - name: LLDAP_LDAP_BASE_DN
              valueFrom:
                secretKeyRef:
                  name: lldap-secrets
                  key: lldap-base-dn
            - name: LLDAP_LDAP_USER_PASS
              valueFrom:
                secretKeyRef:
                  name: lldap-secrets
                  key: lldap-bind-password
          image: lldap/lldap:latest
          name: lldap
          ports:
            - containerPort: 3890
            - containerPort: 17170
          volumeMounts:
            - mountPath: /data
              name: lldap-data
      restartPolicy: Always
      volumes:
        - name: lldap-data
          persistentVolumeClaim:
            claimName: lldap-data
