k8s/apps/auth/lldap/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap-web
  annotations:
    cert-manager.io/cluster-issuer: "acme"
spec:
  ingressClassName: nginx
  rules:
  -
    host: lldap.home.tremoureux.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lldap-service
            port:
              number: 17170
